--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,14 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <script>
+      var head = document.head;
+      var script = document.createElement('script');
+      script.type = 'text/javascript';
+      script.src = "https://209178.t.hyros.com/v1/lst/universal-script?ph=fb1590df5598c8770c1c7fbfb13870b527b36e3e2b2ee95bbf0bd268b93a649c&tag=!clicked&ref_url=" + encodeURI(document.URL) ;
+      head.appendChild(script);
+      </script>
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
