--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Conoce el NUEVO Trabajo que va a revolucionar el Mercado Digital en 2025…"
     />
     <script>
       var head = document.head;
