se cambia favicon

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
 <link
       rel="shortcut icon"
-      href="%PUBLIC_URL%/zeus.ico"
+      href="%PUBLIC_URL%/logo.ico"
     />
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
